<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.blues.myappportfolio.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorUdacity"
        android:text="@string/header_text" />

    <Button
        style="@style/udacity_Btn"
        android:onClick="clickUdcBtn"
        android:text="@string/movieBtn_name"/>

    <Button
        style="@style/udacity_Btn"
        android:onClick="clickUdcBtn"
        android:text="@string/stockBtn_name"/>

    <Button
        style="@style/udacity_Btn"
        android:onClick="clickUdcBtn"
        android:text="@string/buildBiggerBtn_name"/>

    <Button
        style="@style/udacity_Btn"
        android:onClick="clickUdcBtn"
        android:text="@string/appMaterialBtn_name"/>

    <Button
        style="@style/udacity_Btn"
        android:onClick="clickUdcBtn"
        android:text="@string/goUbiquitousBtn_name"/>

    <Button
        style="@style/udacity_Btn"
        android:onClick="clickUdcBtn"
        android:text="@string/capstoneBtn_name"/>


</LinearLayout>
